<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name" translatable="false">PunchClock</string>
    <string name="title_activity_main" translatable="false">PunchClock</string>
    <string name="package_name" translatable="false">com.spenhouet.punchclock</string>
    <string name="custom_url_scheme" translatable="false">com.spenhouet.punchclock</string>

    <string name="channel_clock_name">Running clock</string>
    <string name="channel_clock_description">Ongoing notification with the running work timer</string>
    <string name="channel_wifi_name">Wi-Fi clock in / out</string>
    <string name="channel_wifi_description">Prompts and confirmations when you arrive at or leave the work Wi-Fi</string>

    <string name="notif_working">Working</string>
    <string name="notif_on_break">On break</string>
    <string name="notif_since">Since %s</string>
    <string name="notif_until">Until %s</string>

    <string name="action_break">Break</string>
    <string name="action_resume">Resume</string>
    <string name="action_clock_out">Clock out</string>
    <string name="action_clock_in">Clock in</string>
    <string name="action_dismiss">Dismiss</string>

    <string name="wifi_prompt_in">Connected to %s. Clock in?</string>
    <string name="wifi_prompt_out">Left %1$s at %2$s. Clock out?</string>
    <string name="wifi_clocked_in">Clocked in at %1$s (%2$s)</string>
    <string name="wifi_clocked_out">Clocked out at %1$s (left %2$s)</string>

    <string name="widget_label" translatable="false">PunchClock</string>
    <string name="widget_description">Clock in and out from the home screen</string>
    <string name="widget_not_clocked_in">Not clocked in</string>
    <string name="widget_balance">Balance %s</string>
    <string name="widget_preview_timer" translatable="false">2:47:15</string>
    <string name="widget_preview_balance">Balance +12:30</string>
    <string name="wifi_prompt_break">Left %1$s at %2$s during your usual break. Start a break?</string>
    <string name="wifi_prompt_resume">Back on %1$s at %2$s. End the break?</string>
    <string name="wifi_break_started">Break started at %1$s (left %2$s)</string>
    <string name="wifi_break_ended">Back at %1$s, break ended</string>
    <string name="wifi_break_timeout">Clocked out at %1$s (didn\'t come back after the break)</string>
</resources>
